# xpm-mlboard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
src/xpm_mlboard/: __init__.py  service.py
src/xpm_mlboard/backends/: __init__.py  tensorboard.py
tests/: test_tensorboard.py
