[project]
name = "xpm-mlboard"
version = "0.1.0"
requires-python = ">=3.10"
keywords = ["experimaestro", "tensorboard", "wandb", "machine-learning", "monitoring"]
description = "Lightweight experimaestro services to monitor ML learning curves (TensorBoard, ...)"
readme = "README.md"
license = {text = "GPL-3"}

dependencies = [
    "experimaestro>=2.3.4",
]

[project.optional-dependencies]
tensorboard = [
    "tensorboard>=2.19.0",
    "setuptools<82.0", # needed until https://github.com/tensorflow/tensorboard/issues/7003 is fixed
]

[dependency-groups]
test = [
    "pytest>=8",
]
dev = [
    "pre-commit>=4",
    "ruff>=0.15.7",
    {include-group = "test"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xpm_mlboard"]
