[project]
name = "xpm-mlboard"
dynamic = ["version"]
requires-python = ">=3.10"
keywords = ["experimaestro", "tensorboard", "wandb", "machine-learning", "monitoring"]
description = "Lightweight experimaestro services to monitor ML learning curves (TensorBoard, ...)"
readme = "README.md"
license = {text = "GPL-3"}

dependencies = [
    "experimaestro>=2.3.4",
]

[project.optional-dependencies]
tensorboard = [
    "tensorboard>=2.19.0",
    # tensorboard <2.21 imports the removed-in-setuptools-82 pkg_resources.
    # Fixed by https://github.com/tensorflow/tensorboard/pull/7057 (issue #7003),
    # released in tensorboard 2.21. Drop this pin once we require tensorboard>=2.21.
    "setuptools<82.0",
]

[dependency-groups]
test = [
    "pytest>=8",
]
dev = [
    "pre-commit>=4",
    "ruff>=0.15.7",
    {include-group = "test"},
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/xpm_mlboard/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xpm_mlboard"]
